[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "property-state-model"
version = "0.258.0"
description = "Experimental property-state-first control layer for audited AI outputs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "jorsonbei"}]
keywords = ["ai", "safety", "state-model", "audit", "ollama"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Repository = "https://github.com/jorsonbei/property-state-model"

[tool.setuptools]
package-dir = {"" = "outputs/psm_v0"}
packages = ["psm_v0"]
